--- a/rdm_binderhub_jlabextension/locale/ja_JP/LC_MESSAGES/rdm_binderhub_jlabextension.po
+++ b/rdm_binderhub_jlabextension/locale/ja_JP/LC_MESSAGES/rdm_binderhub_jlabextension.po
@@ -3,11 +3,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: rdm_binderhub_jlabextension 0.1.0\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2022-10-19 15:06+0900\n"
-"PO-Revision-Date: 2022-10-19 14:27+0900\n"
+"POT-Creation-Date: 2022-10-22 17:52+0900\n"
+"PO-Revision-Date: 2022-10-22 17:52+0900\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: ja <LL@li.org>\n"
-"Language: ja\n"
+"Language-Team: ja_JP <LL@li.org>\n"
+"Language: ja_JP\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -16,7 +16,7 @@ msgstr ""
 
 #: src/index.ts:135 src/index.ts:162 src/index.ts:163 src/index.ts:166
 msgid "Sync to RDM"
-msgstr "Sync to RDM"
+msgstr "RDMと同期"
 
 #: src/messages.tsx:5
 msgid "Not running in a GakuNin RDM linked environment"
